--- a/resort-page/resort-style.css
+++ b/resort-page/resort-style.css
@@ -2,6 +2,8 @@ h1 {
   color: #ffb366;
   text-shadow:2px 2px 5px #000000;
   text-align: center;
+  font-family: Georgia;
+  font-size: 500%;
 }
 
 p {
@@ -16,6 +18,7 @@ ul{
   line-height: 35px;
   font-style: normal;
 }
+
 ol{
   font-weight: lighter;
   line-height: 20px;
